{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 213,
  "lineage": "176ac403-5277-c7ea-691b-40eb27ebeee0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:216920995996:instance/i-011fe7b5f273d2838",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011fe7b5f273d2838",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09013be1a3a6f5674",
            "private_dns": "ip-10-1-1-108.af-south-1.compute.internal",
            "private_ip": "10.1.1.108",
            "public_ip": "13.245.143.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08760a0de46fba893",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ba7cf7536a2a56b",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ec200800c4f3338"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:216920995996:instance/i-0ec6c2c4d6cca0eac",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec6c2c4d6cca0eac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0385f4cfff8a73d00",
            "private_dns": "ip-10-1-1-71.af-south-1.compute.internal",
            "private_ip": "10.1.1.71",
            "public_ip": "13.245.8.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02dfba90f26cb593b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ba7cf7536a2a56b",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ec200800c4f3338"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        },
        {
          "index_key": "jenkins-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:216920995996:instance/i-0c35542b4d54c5616",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c35542b4d54c5616",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab7ae585d1366cf1",
            "private_dns": "ip-10-1-1-164.af-south-1.compute.internal",
            "private_ip": "10.1.1.164",
            "public_ip": "13.246.230.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c567724c86de20e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ba7cf7536a2a56b",
            "tags": {
              "Name": "jenkins-slave"
            },
            "tags_all": {
              "Name": "jenkins-slave"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ec200800c4f3338"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Nam-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:internet-gateway/igw-0d52629007ef09636",
            "id": "igw-0d52629007ef09636",
            "owner_id": "216920995996",
            "tags": {
              "Name": "Nam-igw"
            },
            "tags_all": {
              "Name": "Nam-igw"
            },
            "vpc_id": "vpc-0c905b153502c93dc"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Nam-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:route-table/rtb-0d4df80bd60fc4e1d",
            "id": "rtb-0d4df80bd60fc4e1d",
            "owner_id": "216920995996",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d52629007ef09636",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c905b153502c93dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nam-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f6c0dbbda73b2a",
            "route_table_id": "rtb-0d4df80bd60fc4e1d",
            "subnet_id": "subnet-02ba7cf7536a2a56b"
          },
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_route_table.Nam-public-rt",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nam-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0473d58d1b7e49d43",
            "route_table_id": "rtb-0d4df80bd60fc4e1d",
            "subnet_id": "subnet-06da4f66f3f461423"
          },
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_route_table.Nam-public-rt",
            "aws_subnet.Nam-public-subnet-02",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:security-group/sg-02ec200800c4f3338",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ec200800c4f3338",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Shh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins-port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "216920995996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c905b153502c93dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nam-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:subnet/subnet-02ba7cf7536a2a56b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ba7cf7536a2a56b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216920995996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nam-public-subent-01"
            },
            "tags_all": {
              "Name": "Nam-public-subent-01"
            },
            "vpc_id": "vpc-0c905b153502c93dc"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nam-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:subnet/subnet-06da4f66f3f461423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06da4f66f3f461423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216920995996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nam-public-subent-02"
            },
            "tags_all": {
              "Name": "Nam-public-subent-02"
            },
            "vpc_id": "vpc-0c905b153502c93dc"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Nam-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:216920995996:vpc/vpc-0c905b153502c93dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0533748690f5bead1",
            "default_route_table_id": "rtb-0278de0b445997dd9",
            "default_security_group_id": "sg-0a4144bdcd1bec1a8",
            "dhcp_options_id": "dopt-077fb8deefce17470",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c905b153502c93dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0278de0b445997dd9",
            "owner_id": "216920995996",
            "tags": {
              "Name": "Nam-vpc"
            },
            "tags_all": {
              "Name": "Nam-vpc"
            }
          }
        }
      ]
    }
  ]
}